# mail_box_contracts

./: .ai-config.json  .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  .markdownlint.json  .mocharc.json  .npmignore  .prettierignore  AI_ASSISTANT_QUICKSTART.md  AI_DEVELOPMENT_GUIDE.md  AI_OPTIMIZATION_SUMMARY.md  ARCHITECTURE.md  Anchor.toml  BUILD_STATUS.md  CHAINCONFIG_USAGE.md  CLAUDE.md  CREATE2_DEPLOYMENT.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  DEPLOYED.json  DEPLOYMENT.md  DEPLOYMENT_OPTIMIZATION.md  DEVELOPMENT.md  EXACT_DEPLOYMENT_COSTS.md  INTEGRATION.md  OPTIMIZATION_CHECKLIST.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  README.md  RELEASES.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  STATELESS_MIGRATION.md  TESTING.md  address-predictions-v1.2.0.json  eslint.config.js  gas-fix.patch  (+15 more)
.ai/: QUICK_REFERENCE.md  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.husky/: pre-commit
.openzeppelin/: base.json  mainnet.json  optimism.json  polygon.json  sepolia.json
cache/: solidity-files-cache.json
config/: chains.json
contracts/: MailBox.sol  MailBoxFactory.sol  MailService.sol  Mailer.sol  MockSafe.sol  MockUSDC.sol  PrivilegedMail.sol  SafeChecker.sol  SafeDelegateHelper.sol
deployments/: base-upgradeable.json  hardhat-create2.json  hardhat.json  mainnet-upgradeable.json  optimism-upgradeable.json  polygon-upgradeable.json  sepolia-create2.json  sepolia-upgradeable.json  sepolia.json
docs/: AI_ASSISTANT_QUICKSTART.md  AI_DEVELOPMENT_GUIDE.md  AI_DEVELOPMENT_PATTERNS.md  AI_OPTIMIZATION_GUIDE.md  AI_OPTIMIZATION_SUMMARY.md  AI_QUICK_START.md  ARCHITECTURE.md  CHAINCONFIG_USAGE.md  DEPENDENCY_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_WALLETS.md  DEVELOPMENT.md  INTEGRATION.md  PERMISSION_SYSTEM.md  REACT_NATIVE.md  RELEASES.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SOLANA_CPI_PATTERNS.md  SOLANA_EVM_DIFFERENCES.md  SOLANA_INTEGRATION.md  SOLANA_PROGRAM_PAYS_PATTERN.md  SOLANA_SECURITY_MODEL.md  SOLIDITY_INTEGRATION.md  TESTING.md  UPGRADEABILITY.md  ai-development-patterns.md  fee-optimization-summary.md  gas-estimation-guide.md  migration-to-standard-wallets.md  refactoring-summary.md  solana-fee-comparison.md  stateless-client-implementation.md  stateless-client-migration.md  wallet-as-param-architecture.md
examples/: README.md  basic-usage.ts  config-usage.ts  evm-usage.ts  gas-estimation-demo.ts  react-usage.tsx  solana-compute-units-demo.ts  solana-usage.ts  stateless-client-usage.ts  stateless-client-usage.tsx  stateless-usage.ts  stateless-usage.tsx  unified-usage.ts  wagmi-integration.ts  wallet-adapter-integration.ts
plans/: IMPROVEMENTS.md
programs/mailer/: Cargo.toml
programs/mailer-integration-example/: Cargo.toml
programs/mailer-integration-example/src/: lib.rs
programs/mailer/src/: cpi.rs  lib.rs
programs/mailer/tests/: integration_tests.rs  integration_tests.rs.backup
scripts/: check-contract-size.sh  deploy-create2.ts  deploy.ts  security-audit.sh  (+6 more)
(+177 files in other folders)
