[package]
name = "mailer-integration-example"
version = "0.1.0"
description = "Example program showing how to integrate Mailer messaging into your Solana program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mailer_integration_example"

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
borsh = "1.5"
mailer = { path = "../mailer", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
