[package]
name = "mailer"
version = "0.1.0"
description = "Mailer Solana - Native messaging system with USDC fees and revenue sharing"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("custom-heap", "custom-panic"))', 'cfg(target_os, values("solana"))'] }

[lib]
crate-type = ["cdylib", "lib"]
name = "mailer"

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
borsh = "1.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
tokio = { version = "1.0", features = ["full"] }

