[package]
name = "mailer"
version = "0.1.0"
description = "Mailer Solana - Native messaging system with USDC fees and revenue sharing"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("custom-heap", "custom-panic"))', 'cfg(target_os, values("solana"))'] }

[lib]
crate-type = ["cdylib", "lib"]
name = "mailer"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
borsh = "1.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = "z"          # Optimize for size (instead of speed)
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization (slower compile)
overflow-checks = true   # Keep safety checks
strip = "symbols"        # Strip debug symbols
panic = "abort"          # Smaller panic handler

[profile.release.package."*"]
opt-level = "z"          # Optimize dependencies too
strip = "symbols"

